# Sub-D-Tester

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  starten_windows.bat
arduino/kabeltest_mega/: kabeltest_mega.ino
arduino/sub_d_tester_mega/: sub_d_tester_mega.ino
docs/: anschlussplan.md
sub_d_tester/: __init__.py  config.py  protocol.py  serial_connection.py  simulator.py  ui.py
tests/: test_protocol.py
